--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -12,7 +12,7 @@
   <tbody>
     {% for car in object_list %}
       <tr>
-        <td><a href="{% url "taxi:cars-detail" car.pk %}">{{ car.pk }}</a></td>
+        <td><a href="{% url "taxi:car-detail" car.pk %}">{{ car.pk }}</a></td>
         <td>{{ car.model }}</td>
         <td>{{ car.manufacturer }}</td>
       </tr>
